--- a/style.css
+++ b/style.css
@@ -367,6 +367,111 @@ main {
   justify-content: left;
 }
 
+.see-all-btn {
+  text-align: center;
+  margin: 20px auto;
+}
+
+/* perfect place section style*/
+.perfect-place {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+  margin: 100px 0;
+}
+.perfect-place-content {
+  max-width: 50%;
+}
+.perfect-place h3 {
+  margin-bottom: 20px;
+}
+.perfect-place ul {
+  margin-left: 20px;
+  margin: 20px;
+}
+.perfect-place button {
+  margin-top: 20px;
+}
+.perfect-place li {
+  margin: 20px 0;
+  color: #131318;
+  font-size: 16px;
+  font-weight: 700;
+}
+.perfect-place img {
+  max-width: 50%;
+}
+
+/* newsletter section style */
+.newsletter {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  align-items: center;
+}
+.newsletter-content {
+  max-width: 40%;
+  padding: 40px;
+  border-radius: 16px;
+  border: 1px solid #ff5400;
+}
+.newsletter-content h4 {
+  color: #131318;
+  font-size: 1.5rem;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+.newsletter-content p {
+  color: #5a5a5d;
+  font-weight: 400;
+  line-height: 26px;
+  margin-bottom: 20px;
+}
+.newsletter-content hr {
+  border: 1px solid rgba(19, 19, 24, 0.1);
+  margin-bottom: 20px;
+}
+.newsletter-content input {
+  margin-bottom: 16px;
+  width: 100%;
+  padding: 16px 20px;
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  border: none;
+}
+.newsletter-content button {
+  width: 100%;
+}
+.newsletter-img {
+  max-width: 60%;
+  position: relative;
+}
+.newsletter-img img {
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  position: relative;
+}
+.newsletter-img .discount {
+  position: absolute;
+  right: 7px;
+  bottom: 50px;
+  padding: 1.25rem;
+  border-radius: 16px;
+  background: var(--primary-color);
+  transform: rotate(-19.628deg);
+}
+.discount p {
+  color: #fff;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+.discount h4 {
+  color: #fff;
+  font-size: 2rem;
+  font-weight: 800;
+}
 /* responsive style */
 /* mobile devices */
 @media screen and (max-width: 600px) {
@@ -401,10 +506,16 @@ main {
   .banner button {
     padding: 20px;
   }
-  .our-popular {
+  .our-popular,
+  .newsletter,
+  .perfect-place {
     flex-direction: column;
   }
-  .our-popular-content {
+  .our-popular-content,
+  .perfect-place-content,
+  .perfect-place img,
+  .newsletter-content,
+  .newsletter-img {
     max-width: 100%;
   }
   main {
@@ -473,10 +584,13 @@ main {
   main {
     max-width: 90%;
   }
-  .our-popular {
+  .our-popular,
+  .perfect-place {
     flex-direction: column;
   }
-  .our-popular-content {
+  .our-popular-content,
+  .perfect-place-content,
+  .perfect-place img {
     max-width: 100%;
   }
   .card-content,
